Coooommmpressiiiooonnnn + bibtex revisité

--- a/bib_dl2.bib
+++ b/bib_dl2.bib
@@ -5,9 +5,8 @@
 @InProceedings{Abalov_14_auto,
   Title                    = {Automated grouping of decomposition components of time series for singular spectrum analysis},
   Author                   = {Abalov, N.V. and Gubarev, V.V.},
-  Booktitle                = {Proceding of the 9th International Forum on Strategic Technology (IFOST), Chittagong, India},
+  Booktitle                = {Proceedings of the 9th International Forum on Strategic Technology (IFOST), Chittagong, India},
   Year                     = {2014},
-  Organization             = {IEEE},
 
   __markedentry            = {[tom:6]},
   File                     = {article:jabref_folder/abalov_14_auto.pdf:PDF},
@@ -34,7 +33,7 @@
 @InProceedings{Alexandrov_05_auto,
   Title                    = {Automatic extraction and forecast of time series cyclic components within the framework of SSA},
   Author                   = {Alexandrov, Th. and Golyandina, N.},
-  Booktitle                = {Procedings of the St. Petersburg Workshop on Simulation},
+  Booktitle                = {Proceedings of the Workshop on Simulation, St. Petersburg , Russia},
   Year                     = {2005},
   Pages                    = {45--50},
 
@@ -48,7 +47,7 @@
 @InProceedings{alvarez_13_auto,
   Title                    = {Automatic Singular Spectrum Analysis for Time-Series Decomposition},
   Author                   = {Alvarez-Mesa, A.M. and Acosta-Medina, C.D. and Castellanos-Dominguez, G.},
-  Booktitle                = {European Symposium on Artificial Neural Networks, Computational Intelligence and Machine Learning, Bruges, Belgium},
+  Booktitle                = {Proceedings of the European Symposium on Artificial Neural Networks, Computational Intelligence and Machine Learning, Bruges, Belgium},
   Year                     = {2013},
   Pages                    = {131--136},
 
